--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ display: flex;
 }
 
 /* MODAL */
-button {
+#open-modal {
     background-color: rgb(122, 160, 204);
     height: 5.5rem;
     font-size: 2.4rem;
@@ -190,8 +190,32 @@ button {
     padding-right: 140px;
     cursor: pointer;
     opacity: 0.8;
+    transition: 0.5s;
 }
 
 button:hover {
     opacity: 1;
+}
+
+#fade {
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.2;
+    z-index: 5;
+}
+#modal {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    background-color: white;
+    z-index: 10;
+    width: 500px;
+    max-width: 90%;
+    padding: 1.2rem;
+    border-radius: .7rem;
 }
