--- a/style.css
+++ b/style.css
@@ -165,14 +165,21 @@ display: flex;
 .thanks aside{
     width: 40%;
 }
-.thanks h2{
-    font-size: 2.9rem;
+#modal p{
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+    text-align: center;
 }
-.thanks h2 span{
-    color: darkcyan    
+#modal p span{
+    color: darkcyan;    
+}
+#modal #pet-lovs {
+    font-size: 3rem;
 }
 
 /* MODAL */
+
 #open-modal {
     background-color: rgb(122, 160, 204);
     height: 5.5rem;
@@ -197,14 +204,20 @@ button:hover {
     opacity: 1;
 }
 
+#fade, #modal {
+    transition: 0.5s;
+    opacity: 1;
+    pointer-events: all;
+}
+
 #fade {
     top: 0;
     left: 0;
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: black;
-    opacity: 0.2;
+    background-color: rgb(0, 0, 0.6);
+    opacity: 0.8;
     z-index: 5;
 }
 #modal {
@@ -218,4 +231,44 @@ button:hover {
     max-width: 90%;
     padding: 1.2rem;
     border-radius: .7rem;
+    
+}
+#modal img {
+    position: center;
+    background-position: center;
+    width: 500px;
+    max-width: 90%;
+    overflow: hidden;
+}
+
+#fade.hide, #modal.hide {
+    opacity: 0;
+    pointer-events: none
+}
+
+#modal.hide {
+    top: 0;
+}
+
+#modal{
+    display: flex;
+       align-items: center;
+       justify-content: space-evenly;
+       flex-flow: row wrap;
+       flex-direction: column
+}
+
+#close-modal {
+    border: none;
+    background-color:rgb(98, 201, 201); 
+    color: white;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 15px;
+    opacity: .8;
+    transition: opacity(.5);
+}
+#close-modal:hover{
+    opacity: 1;
 }
